feat(pdf): OCR scanned PDFs when converting to Word